--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -175,12 +175,16 @@
                 <VisualState x:Name="vsColorFontHidden"/>
                 <VisualState x:Name="vsColorListShown">
                     <Storyboard>
-                        <DoubleAnimation Duration="0" To="-76" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="colorListPanel" d:IsOptimized="True"/>
+                        <DoubleAnimation Duration="0" To="-72" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="colorListPanel" d:IsOptimized="True"/>
+                        <DoubleAnimation Duration="0" To="0.5" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="btnColor" d:IsOptimized="True"/>
+                        <DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="arrowColor" d:IsOptimized="True"/>
                     </Storyboard>
                 </VisualState>
                 <VisualState x:Name="vsFontListShown">
                     <Storyboard>
-                        <DoubleAnimation Duration="0" To="-76" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="fontListPanel" d:IsOptimized="True"/>
+                        <DoubleAnimation Duration="0" To="-72" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="fontListPanel" d:IsOptimized="True"/>
+                        <DoubleAnimation Duration="0" To="0.5" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="btnFont" d:IsOptimized="True"/>
+                        <DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="arrowFont" d:IsOptimized="True"/>
                     </Storyboard>
                 </VisualState>
             </VisualStateGroup>
@@ -201,14 +205,14 @@
                                 </DiscreteObjectKeyFrame.Value>
                             </DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnColor">
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnColorPanel">
                             <DiscreteObjectKeyFrame KeyTime="0">
                                 <DiscreteObjectKeyFrame.Value>
                                     <Visibility>Collapsed</Visibility>
                                 </DiscreteObjectKeyFrame.Value>
                             </DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnFont">
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnFontPanel">
                             <DiscreteObjectKeyFrame KeyTime="0">
                                 <DiscreteObjectKeyFrame.Value>
                                     <Visibility>Collapsed</Visibility>
@@ -226,14 +230,14 @@
                                 </DiscreteObjectKeyFrame.Value>
                             </DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnColor">
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnColorPanel">
                             <DiscreteObjectKeyFrame KeyTime="0">
                                 <DiscreteObjectKeyFrame.Value>
                                     <Visibility>Collapsed</Visibility>
                                 </DiscreteObjectKeyFrame.Value>
                             </DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnFont">
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnFontPanel">
                             <DiscreteObjectKeyFrame KeyTime="0">
                                 <DiscreteObjectKeyFrame.Value>
                                     <Visibility>Collapsed</Visibility>
@@ -279,6 +283,36 @@
                                 </DiscreteObjectKeyFrame.Value>
                             </DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+            <VisualStateGroup x:Name="vsgCandidate">
+                <VisualStateGroup.Transitions>
+                    <VisualTransition GeneratedDuration="0:0:0.3">
+                        <VisualTransition.GeneratedEasingFunction>
+                            <PowerEase EasingMode="EaseInOut"/>
+                        </VisualTransition.GeneratedEasingFunction>
+                    </VisualTransition>
+                </VisualStateGroup.Transitions>
+                <VisualState x:Name="vsCandidateHidden"/>
+                <VisualState x:Name="vsCandidateShown">
+                    <Storyboard>
+                        <DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="candidatePanel" d:IsOptimized="True"/>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+            <VisualStateGroup x:Name="vsgAppBar">
+                <VisualStateGroup.Transitions>
+                    <VisualTransition GeneratedDuration="0:0:0.2">
+                        <VisualTransition.GeneratedEasingFunction>
+                            <PowerEase EasingMode="EaseInOut"/>
+                        </VisualTransition.GeneratedEasingFunction>
+                    </VisualTransition>
+                </VisualStateGroup.Transitions>
+                <VisualState x:Name="vsAppBarHidden"/>
+                <VisualState x:Name="vsAppBarShown">
+                    <Storyboard>
+                        <DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="appBarPanel" d:IsOptimized="True"/>
                     </Storyboard>
                 </VisualState>
             </VisualStateGroup>
@@ -380,7 +414,7 @@
         </Grid>
 
         <!--color & font-->
-        <Grid x:Name="colorListPanel" VerticalAlignment="Bottom" Background="#ffff7e7e" Grid.Row="1" Height="72" RenderTransformOrigin="0.5,0.5">
+        <Grid x:Name="colorListPanel" VerticalAlignment="Bottom" Background="#ffffbfbf" Grid.Row="1" Height="72" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform/>
             </Grid.RenderTransform>
@@ -395,7 +429,7 @@
             </ListBox>
         </Grid>
 
-        <Grid x:Name="fontListPanel" VerticalAlignment="Bottom" Background="#ffff7e7e" Grid.Row="1" Height="72" RenderTransformOrigin="0.5,0.5">
+        <Grid x:Name="fontListPanel" VerticalAlignment="Bottom" Background="#ffffbfbf" Grid.Row="1" Height="72" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform/>
             </Grid.RenderTransform>
@@ -414,42 +448,104 @@
         </Grid>
 
         <!--app bar-->
-        <Grid VerticalAlignment="Bottom" Background="#ffe64d4a" Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <sharedControl:AppBar x:Name="appBar">
-                <sharedControl:BarButton x:Name="btnPhoto" Icon="/Assets/Images/AppBar/AppBarPhoto.png" 
+        <Grid Background="#ffff7e7e" Grid.Row="1">
+            <Grid x:Name="appBarPanel" RenderTransformOrigin="0.5,0.5">
+                <Grid.RenderTransform>
+                    <CompositeTransform TranslateY="0"/>
+                </Grid.RenderTransform>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <sharedControl:AppBar x:Name="appBar">
+                    <sharedControl:BarButton x:Name="btnPhoto" Icon="/Assets/Images/AppBar/AppBarPhoto.png" 
                                      Text="照片" Margin="10,0,10,0" Visibility="Visible"
                                      Click="PickPhoto_Click"/>
-                <sharedControl:BarButton x:Name="btnShipin" Icon="/Assets/Images/AppBar/AppBarShipin.png" 
-                                     Text="饰品" Margin="10,0,10,0" Visibility="Visible"
+                    <sharedControl:BarButton x:Name="btnShipin" Icon="/Assets/Images/AppBar/AppBarShipin.png" 
+                                     Text="饰品" Margin="10,0,10,0"
                                      Click="Shipin_Click"/>
-                <sharedControl:BarButton x:Name="btnText" Icon="/Assets/Images/AppBar/AppBarText.png" 
-                                     Text="文字" Margin="10,0,10,0" Visibility="Visible"
+                    <sharedControl:BarButton x:Name="btnText" Icon="/Assets/Images/AppBar/AppBarText.png" 
+                                     Text="文字" Margin="10,0,10,0"
                                      Click="Text_Click"/>
-                <sharedControl:BarButton x:Name="btnBiankuang" Icon="/Assets/Images/AppBar/AppBarFrame.png" 
+                    <sharedControl:BarButton x:Name="btnBiankuang" Icon="/Assets/Images/AppBar/AppBarFrame.png" 
                                      Text="边框" Margin="10,0,10,0" Visibility="Visible"
                                      Click="Biankuang_Click"/>
-                <sharedControl:BarButton x:Name="btnBeijing" Icon="/Assets/Images/AppBar/AppBarBeijing.png" 
+                    <sharedControl:BarButton x:Name="btnBeijing" Icon="/Assets/Images/AppBar/AppBarBeijing.png" 
                                      Text="背景" Margin="10,0,10,0" Visibility="Visible"
                                      Click="Beijing_Click"/>
 
-                <sharedControl:BarButton x:Name="btnColor" Icon="/Assets/Images/AppBar/AppBarColor.png" 
-                                     Text="颜色" Margin="10,0,10,0" Visibility="Visible"
-                                     Click="color_Click"/>
-                <sharedControl:BarButton x:Name="btnFont" Icon="/Assets/Images/AppBar/AppBarFont.png" 
-                                     Text="字体" Margin="10,0,10,0" Visibility="Visible"
-                                     Click="font_Click"/>
-            </sharedControl:AppBar>
+                    <Grid x:Name="btnColorPanel">
+                        <sharedControl:BarButton x:Name="btnColor" Icon="/Assets/Images/AppBar/AppBarColor.png" 
+                                     Text="颜色" Margin="10,0,10,0" Visibility="Visible" Click="color_Click"/>
+                        <Image x:Name="arrowColor" Source="/Assets/Images/ArrowDown.png" Stretch="Uniform" Height="9"
+                               VerticalAlignment="Top" Margin="0,-1,0,0" Opacity="0"/>
+                    </Grid>
 
-            <sharedControl:ContentButton Grid.Column="1" Height="{Binding ActualHeight, ElementName=appBar}"
+                    <Grid x:Name="btnFontPanel">
+                        <sharedControl:BarButton x:Name="btnFont" Icon="/Assets/Images/AppBar/AppBarFont.png" 
+                                     Text="字体" Margin="10,0,10,0" Visibility="Visible" Click="font_Click"/>
+                        <Image x:Name="arrowFont" Source="/Assets/Images/ArrowDown.png" Stretch="Uniform" Height="9"
+                               VerticalAlignment="Top" Margin="0,-1,0,0" Opacity="0"/>
+                    </Grid>
+
+                </sharedControl:AppBar>
+
+                <sharedControl:ContentButton Grid.Column="1" Height="{Binding ActualHeight, ElementName=appBar}"
                                          Tapped="AppbarButton_OK_Tapped">
-                <Image Source="/Assets/Images/AppBar/AppBarSaveShare.png" Stretch="Uniform"/>
-            </sharedControl:ContentButton>
+                    <Image Source="/Assets/Images/AppBar/AppBarSaveShare.png" Stretch="Uniform"/>
+                </sharedControl:ContentButton>
+            </Grid>
         </Grid>
 
+        <Grid x:Name="busyMask" Background="#BF000000" Grid.RowSpan="2">
+            <TextBlock Text="加载中..." 
+                       Style="{StaticResource TextBlockBase}" Foreground="#ffffffff" FontSize="22"
+                       VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </Grid>
+
+        <!--pic selector-->
+        <Grid x:Name="candidatePanel" VerticalAlignment="Top" Visibility="Visible" Background="#ff2d2d2d" RenderTransformOrigin="0.5,0.5">
+            <Grid.RenderTransform>
+                <CompositeTransform TranslateY="-240"/>
+            </Grid.RenderTransform>
+            <StackPanel>
+                <TextBlock Style="{StaticResource OperationPage_CandidateHint_Text_Style}">
+                    <Run Text="最多 9 张照片哦！你还可以选" />
+                    <Run x:Name="txtPhotoCount"/>
+                    <Run Text="张。"/>
+                </TextBlock>
+                <ScrollViewer Style="{StaticResource HorizontalScrollViewer_Style}" Height="100"
+                              Margin="16,0,6,0">
+                    <ItemsControl x:Name="candidateListBox">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="0,10,10,10" Tapped="candidateSelect_Tapped">
+                                    <Border BorderBrush="#ffffffff" BorderThickness="1">
+                                        <Image Source="{Binding Thumbnail}" Width="80" Height="80" Stretch="UniformToFill"/>
+                                    </Border>
+                                    <Image Source="/Assets/Images/Select.png" Stretch="Uniform" 
+                                           VerticalAlignment="Center" HorizontalAlignment="Center"
+                                           Width="32" Height="32" Margin="-10"
+                                           Opacity="{Binding Selected}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+                <sharedControl:ContentButton Margin="16,10,16,16" Tapped="candidateOK_Tapped">
+                    <Grid  Background="#ffff7e7e" Height="48">
+                        <TextBlock Text="确认" Style="{StaticResource TextBlockBase}"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                                   Foreground="White" FontSize="24" Margin="10,0,0,0"/>
+                    </Grid>
+                </sharedControl:ContentButton>
+            </StackPanel>
+        </Grid>
 
         <!--<StackPanel Background="White" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.ColumnSpan="100" Grid.RowSpan="100" IsHitTestVisible="False" Opacity="0.5">
             <TextBlock x:Name="testText1" Foreground="Red" FontSize="32" Margin="10" />
