--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
@@ -708,7 +708,6 @@
         <Setter Property="Margin" Value="10,0,0,0"/>
     </Style>
 
-
     <!--operataion page-->
     <Style x:Key="OperationPage_ContextMenu_Text_Style" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
         <Setter Property="FontSize" Value="24"/>
@@ -719,5 +718,14 @@
         <Setter Property="Margin" Value="20,10,20,10"/>
     </Style>
 
-    
+    <Style x:Key="OperationPage_CandidateHint_Text_Style" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="Foreground" Value="#ffffffff"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="16,10,16,10"/>
+    </Style>
+
+
 </ResourceDictionary>
