--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WelcomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WelcomePage.xaml
@@ -19,44 +19,27 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>-->
 
-        <!--<Grid Background="#ff666666" Grid.RowSpan="2"/>-->
-
-        <Hub>
-            <HubSection>
-                <DataTemplate>
-                    <Grid>
-                        <!--Margin="-20,-10,-40,0"-->
-                        <Image Source="/Assets/Images/Welcome/Welcome1.jpg" Stretch="Uniform"/>
-                    </Grid>
-                </DataTemplate>
-            </HubSection>
-            <HubSection>
-                <DataTemplate>
-                    <Grid>
-                        <Image Source="/Assets/Images/Welcome/Welcome2.jpg" Stretch="Uniform"/>
-                    </Grid>
-                </DataTemplate>
-            </HubSection>
-            <HubSection>
-                <DataTemplate>
-                    <Grid>
-                        <Image Source="/Assets/Images/Welcome/Welcome3.jpg" Stretch="Uniform"/>
-                    </Grid>
-                </DataTemplate>
-            </HubSection>
-            <HubSection>
-                <DataTemplate>
-                    <Grid>
-                        <Image Source="/Assets/Images/Welcome/Welcome4.jpg" Stretch="Uniform"/>
-                        <sharedControl:ContentButton Height="64" Margin="24,200,0,0" Tapped="go_Tapped">
-                            <Grid>
-                                <Image Source="/Assets/Images/Welcome/WelcomeGoButton.png" Stretch="Uniform"/>
-                            </Grid>
-                        </sharedControl:ContentButton>
-                    </Grid>
-                </DataTemplate>
-            </HubSection>
-        </Hub>
+        <FlipView>
+            <FlipViewItem>
+                <Image Source="/Assets/Images/Welcome/Welcome1.jpg" Stretch="UniformToFill"/>
+            </FlipViewItem>
+            <FlipViewItem>
+                <Image Source="/Assets/Images/Welcome/Welcome2.jpg" Stretch="UniformToFill"/>
+            </FlipViewItem>
+            <FlipViewItem>
+                <Image Source="/Assets/Images/Welcome/Welcome3.jpg" Stretch="UniformToFill"/>
+            </FlipViewItem>
+            <FlipViewItem>
+                <Grid>
+                    <Image Source="/Assets/Images/Welcome/Welcome4.jpg" Stretch="UniformToFill"/>
+                    <sharedControl:ContentButton Height="64" Margin="0,200,0,0" Tapped="go_Tapped">
+                        <Grid>
+                            <Image Source="/Assets/Images/Welcome/WelcomeGoButton.png" Stretch="Uniform"/>
+                        </Grid>
+                    </sharedControl:ContentButton>
+                </Grid>
+            </FlipViewItem>
+        </FlipView>
 
         <!--page title-->
         <!--<TextBlock Text="Welcome" Style="{StaticResource PageTitle_Style}"/>-->
